tab-details style - fix url x overflow issues for long domain names

--- a/src/popup/components/tab-details.styl
+++ b/src/popup/components/tab-details.styl
@@ -5,3 +5,8 @@ ul
     list-style-type: none
     padding: 10px 10px
     border-left: 5px solid black
+
+.hyperlink
+    width: 195px
+    overflow-x: hidden
+    text-overflow: ellipsis
